FormBuilder/src/main/webapp/assets/styles/partials/_header.scss
nav{
  background-color: $color-highlight;
  display: block;
  margin-bottom: 20px;
  height: 135px;
}
.header{
  height: 50px;
  display: inline-block;
  width: 100%;
  .application-logo{
    position: relative;
    display:block;
    margin-left: 15px;
  }
}
.navbar-subheader{
  display: inline-block;
  color: $color-highlight;
  height: 30px;
  width: 100%;
  background-color: $color-brand;
  ul{
    list-style: none;
    float: right;
    li{
      display: inline-block;
      margin-top: 6px;
      font-size: 16px;
      margin-right: 30px;
      @media(max-width: 1028px){
        margin-right: 60px;
      }
    }
  }
}

.app-nav .container{
  width: 100%;
  padding: 0px;
}


/* Dimensions should be width: 182px; height: 45px;*/
.application-logo {
  width: 182px;
  height: 31px;
  display: inline-block;
  margin-top: 10px;

  color: #FFFFFF;
  font-size: 1.5rem;
  font-weight: 700;
  &:hover, &:active, &:focus, &:visited {
    color: #FFFFFF;
    text-decoration: none;
  }
  &.logo-image {
    background: transparent url(../images/nci-logo-full.svg) no-repeat;
    color: transparent;
    background-size: contain;
    width: 400px;
    font-size: inherit;
    font-weight: 700;
    &:hover, &:focus {
      background-color: transparent !important;
    }
  }
}
.navbar-links {
	line-height: 50px;
	margin-right: 35px;
	a {
		color: $color-title;
	}
}
#nav-access {
	margin-right: 20px;
}
#welcome-divider {
	margin-left: 10px;
	margin-right: 10px;
}
.navbar-subheader-links {
	float: right;
	margin-right: 20px;
	line-height: 30px;
}

.dropdown {
    position: relative;
    display: inline-block;
}

.dropdown-content {
    display: none;
    position: absolute;
    background-color: #f9f9f9;
    min-width: 200px;
    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
    padding: 12px 16px;
    z-index: 1;
    a {
    	display: block;
    }
}
#cartsDropdown {
	margin-left: 30px;
	.dropdown-content {
		right: 0px;
	}
}
#toolsDropdown {
	margin-left: 30px;
	.dropdown-content {
		right: 0px;
	}
}

.dropdown:hover .dropdown-content {
    display: block;
}

